--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,13 @@
 spring.jpa.properties.hibernate.jdbc.batch_size=5
 spring.jpa.properties.hibernate.order_inserts=true
 
-spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=postgresql
+spring.datasource.url=jdbc:postgresql://localhost:5432/oms
+spring.datasource.username=vipulsharma
+spring.datasource.password=password
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 
 logging.level.com.egen.ordercontroller = TRACE
 
